[metadata]
name = tower
version = 1.0
description = Your description
long_description = A longer description
license = Your license here
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = false
packages = find:
install_requires =
    pygame==2.*

[options.package_data]
tower_defense.assets.images = *.png
tower_defense.assets.audio = *.wav
tower.assets.levels = *

[options.entry_points]
# Optional, but if you want to keep it,
# make sure you have a function called
# main() in tower.main!
console_scripts =
    tower_defense = tower_defense.main:main